# reglsq

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.rst  MANIFEST.in  README.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg
.github/: pull_request_template.md
docs/: .gitignore  Makefile  bibfile.bib  bibliography.rst  conf.py  index.rst
docs/_static/css/: custom_furo.css  custom_rtd.css
docs/_templates/furo/components/: edit-this-page.html
docs/_templates/furo/sidebar/: brand.html  scroll-end.html
docs/_templates/rtd/: layout.html
docs/_templates/sphinx/autosummary/: module.rst
docs/how_to/: index.rst
docs/reference/: api.rst  index.rst
docs/topic/: Tikhonov.rst  index.rst  viscoelastic_spectrum.rst
reglsq/: __init__.py  fit_maxwell.py  maxwell.py
test/: test_example_module.py
